# synthetic-dataflow-bigquery

./: .envrc.example  .gitignore  CLAUDE.md  README.md  initial_prompt.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: b1-rag-engineer.md  b2-library-engineer.md  beam-pipeline-author.md  ddl-codegen-agent.md  gpu-image-builder.md
.claude/skills/: beam-dofn.md  ddl-codegen.md  engine-contract.md  gpu-dockerfile.md  model-handler.md  refactor-cleanup.md  reference-data.md  validation-mode-a.md
.github/: drift-check.txt
.github/workflows/: 1_build_python_beam.yaml  2_deploy_flex_template_python_beam.yaml  3_import_dag.yaml  ci.yml
composer/: synthetic_beam_bigquery.py
config/: models.yml  thresholds.yml
config/bq_schemas/: dead_letter.schema.json  validation_runs.schema.json
docker/: .dockerignore  Dockerfile  Dockerfile.gpu  flex_template_metadata.json
docs/: CICD.md  GPU_CONTAINER.md  M4_LOCAL_SMOKE.md  M4_SETUP.md  MODEL_LAYOUT.md  ROADMAP.md
docs/adr/: 0001-no-managed-gcp-services.md  0002-gemma-4-model-shortlist.md  0003-jfrog-image-registry.md  0004-europe-west3-region.md  0005-live-select-reference-data.md  0006-generation-engine-abc.md  0007-dry-documentation-policy.md  0008-ci-driven-builds.md  0009-single-flex-template-image.md  0010-m4-local-smoke-mlx.md  0011-adopt-beam-vllm-model-handler.md  0012-enterprise-image-build.md  0013-distribution-estimator-spine.md  0014-vllm-model-client-owns-server.md  0015-worker-image-via-artifact-registry.md  README.md
docs/superpowers/specs/: 2026-05-21-synthesis-engines-design.md
scripts/: build_gpu_image.sh  extract_ddl.py  hello_synthetic_mlx.py  probe_gpu_dataflow.sh  push_gpu_image.sh  vllm_spike.py
