# synthetic-dataflow-bigquery — uv virtual workspace root.
#
# Members live under packages/. The root itself is not installable; it
# exists to share dev tooling (ruff, mypy, pytest) and pin Python.
#
# Local dev (laptop):     uv sync --group dev          (no Beam/GCP/GPU deps)
# Beam dev (laptop):      uv sync --group dev --package sdfb-beam
# GPU container build:    uv sync --group dev --package sdfb-beam --extra gpu --extra embedding --extra library
[project]
name = "synthetic-dataflow-bigquery"
version = "0.1.0"
description = "Synthetic data generation for BigQuery via Apache Beam on Dataflow, powered by self-hosted open-weight LLMs (Gemma 4 family) on L4 GPU workers."
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
readme = "README.md"
authors = [{ name = "synthetic-dataflow-bigquery contributors" }]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/sdfb-core", "packages/sdfb-beam", "packages/sdfb-tests"]

[tool.uv.sources]
sdfb-core = { workspace = true }
sdfb-beam = { workspace = true }
sdfb-tests = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.100.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["packages/sdfb-tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "SIM", "PL"]
ignore = ["E501", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["PLR2004"]  # magic-number checks are noise in tests

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["packages/sdfb-tests/tests"]
pythonpath = ["packages/sdfb-tests/src"]
addopts = "-ra --strict-markers"
markers = [
    "gpu: requires NVIDIA GPU — skipped on the laptop (run on the M4)",
    "gcp: requires live GCP credentials — skipped on the laptop",
    "integration: DirectRunner end-to-end tests with FakeModelClient",
    "slow: takes >1s — run nightly, not on every commit",
]
